Clean up code, get data from appsettings

--- a/appsettings.json
+++ b/appsettings.json
@@ -8,5 +8,11 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "Postgres_Db": "Server=localhost;Database=notenoughdb;Port=5432;Username=mutiaz;Password=123"
+  },
+  "JWT": {
+    "SecurityKey": "This is my supper secret key for jwt",
+    "Issuer": "http://localhost:8080",
+    "Audience": "localhost:8080",
+    "CookieKey": "Authorization"
   }
 }
