Change appsettings to CookieHeader

--- a/appsettings.json
+++ b/appsettings.json
@@ -13,6 +13,6 @@
     "SecurityKey": "This is my supper secret key for jwt",
     "Issuer": "http://localhost:8080",
     "Audience": "localhost:8080",
-    "CookieKey": "Authorization"
+    "CookieHeader": "Authorization"
   }
 }
