--- a/clientapp/.env
+++ b/clientapp/.env
@@ -1,1 +1,2 @@
-﻿REACT_APP_ROOT_URL = http://localhost:8080
+﻿REACT_APP_ROOT_URL=http://localhost:8080
+REACT_APP_FETCH_TYPE='application/json; charset=UTF-8'
