--- a/appsettings.json
+++ b/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Postgres_Db": "Server=localhost;Database=notenoughdb;Port=5432;Username=mutiaz;Password=123"
+    "Postgres_Db": "Server=localhost;Database=notenoughdb;Port=5432;Username=admin;Password=root1234"
   },
   "JWT": {
     "SecurityKey": "This is my supper secret key for jwt",
