Fix migration and update HTTP responses

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -4,5 +4,15 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Postgres_Db": "Server=db;Database=postgres;Port=5432;Username=admin;Password=root1234"
+  },
+  "JWT": {
+    "SecurityKey": "This is my supper secret key for jwt",
+    "Issuer": "http://localhost:8080",
+    "Audience": "localhost:8080",
+    "CookieHeader": "Authorization"
   }
 }
