Add deployment of .env secrets through Docker

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -7,10 +7,10 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Postgres_Db": "Server=localhost;Database=postgres;Port=5432;Username=admin;Password=root1234"
+    "Postgres_Db": "Server=localhost;Database=postgres;Port=5432;Timeout=30;CommandTimeout=60;Username=admin;Password=root1234"
   },
   "JWT": {
-    "SecurityKey": "This is my supper secret key for jwt",
+    "SecurityKey": "",
     "Issuer": "http://localhost:8080",
     "Audience": "localhost:8080",
     "CookieHeader": "Authorization"
