Fix updating database from Development API

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -7,12 +7,12 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Postgres_Db": "Server=localhost;Database=postgres;Port=5432;Timeout=30;CommandTimeout=60;Username=admin;Password=root1234"
+    "Postgres_Db": "Server=${SERVER:localhost};Database=postgres;Port=5432;Timeout=30;CommandTimeout=60;Username=${POSTGRES_USER:admin};Password=${POSTGRES_PASSWORD:root1234}"
   },
   "JWT": {
-    "SecurityKey": "",
-    "Issuer": "http://localhost:8080",
-    "Audience": "localhost:8080",
+    "SecurityKey": "${JWT__SecurityKey:YourLocalDevelopmentKeyHere}",
+    "Issuer": "${APP_URL:http://localhost:8080}",
+    "Audience": "${DOMAIN_URL:localhost:8080}",
     "CookieHeader": "Authorization"
   }
 }
