--- a/appsettings.json
+++ b/appsettings.json
@@ -7,8 +7,8 @@
   },
   "AllowedHosts": "*",
   "JWT": {
-    "Issuer": "http://localhost:8080",
-    "Audience": "localhost:8080",
+    "Issuer": "${APP_URL:http://localhost:8080}",
+    "Audience": "${DOMAIN_URL:localhost:8080}",
     "CookieHeader": "Authorization"
   }
 }
