Add .env.example file for deployment purposes

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Postgres_Db": "Server=${SERVER:localhost};Database=postgres;Port=5432;Timeout=30;CommandTimeout=60;Username=${POSTGRES_USER:admin};Password=${POSTGRES_PASSWORD:root1234}"
+    "Postgres_Db": "Server=${POSTGRES_DEVELOPMENT_SERVER:localhost};Database=postgres;Port=5432;Timeout=30;CommandTimeout=60;Username=${POSTGRES_USER:admin};Password=${POSTGRES_PASSWORD:root1234}"
   },
   "JWT": {
     "SecurityKey": "${JWT__SecurityKey:YourLocalDevelopmentKeyHere}",
