Implement AppConfigurationData to fix dependency

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -14,5 +14,12 @@
     "Issuer": "${APP_URL:http://localhost:8080}",
     "Audience": "${DOMAIN_URL:localhost:8080}",
     "CookieHeader": "Authorization"
+  },
+  "App":
+  {
+    "RequiredPasswordLength": 8,
+    "SessionTimeWithoutCookie": "00:15:00",
+    "SessionTimeWithCookie": "14.0:0:0",
+    "NoteTextLength": 100
   }
 }
