--- a/appsettings.json
+++ b/appsettings.json
@@ -9,6 +9,14 @@
   "JWT": {
     "Issuer": "${APP_URL:http://localhost:8080}",
     "Audience": "${DOMAIN_URL:localhost:8080}",
-    "CookieHeader": "Authorization"
+    "CookieHeader": "Authorization",
+    "ExpirationTime": "00:15:00"
+  },
+  "App":
+  {
+    "RequiredPasswordLength": 8,
+    "SessionTimeWithoutCookie": "00:15:00",
+    "SessionTimeWithCookie": "14.0:0:0",
+    "NoteTextLength": 100
   }
 }
