Fix environment variables for C# API

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 APP_URL=http://localhost:8080 # Used as CORS and JWT issuer.
 DOMAIN_URL=localhost:8080 # Used as CORS and JWT audience.
 
-JWT__SecurityKey= # Put here your (preferably randomized) security key
+JWT_SECURITY_KEY= # Put here your (preferably randomized) security key
 
 PGADMIN_DEFAULT_EMAIL=email@email.com # Put here your email address to login to pgAdmin GUI
 PGADMIN_DEFAULT_PASSWORD=password # Put here your password to login to pgAdmin GUI
