--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -6,14 +6,9 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "Postgres_Db": "Server=${POSTGRES_DEVELOPMENT_SERVER:localhost};Database=postgres;Port=5432;Timeout=30;CommandTimeout=60;Username=${POSTGRES_USER:admin};Password=${POSTGRES_PASSWORD:root1234}"
-  },
   "JWT": {
-    "SecurityKey": "${JWT__SecurityKey:YourLocalDevelopmentKeyHere}",
-    "Issuer": "${APP_URL:http://localhost:8080}",
-    "Audience": "${DOMAIN_URL:localhost:8080}",
-    "CookieHeader": "Authorization"
+    "CookieHeader": "Authorization",
+    "ExpirationTime": "00:15:00"
   },
   "App":
   {
