Split frontend from backend as Docker container

--- a/clientapp/.env
+++ b/clientapp/.env
@@ -1,3 +1,5 @@
 ﻿# NOT SENSITIVE DATA FOR REACT FRONTEND
 REACT_APP_ROOT_URL=http://localhost:8080
 REACT_APP_FETCH_TYPE='application/json; charset=UTF-8'
+
+REACT_APP_BACKEND_ENABLED=true
