--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,12 @@
       - "5432"
     volumes:
       - ./postgres-data:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-admin}"]
+      interval: 5s
+      retries: 5
+      start_period: 10s
+      timeout: 3s
 
   pgadmin:
     container_name: pgadmin
@@ -48,6 +54,25 @@
     expose:
       - "8080"
     depends_on:
-      - db
+      db:
+        condition: service_healthy
     volumes:
       - ./data-protection-keys:/root/.aspnet/DataProtection-Keys
+
+  frontend:
+    container_name: react-app
+    build:
+      context: ./clientapp
+      dockerfile: Dockerfile
+    environment:
+      - REACT_APP_BACKEND_ENABLED=${USE_BACKEND:-true}
+    ports:
+      - "3000:80"
+    expose:
+      - "3000"
+    depends_on:
+      - api
+    volumes:
+      - ./clientapp:/app
+      - /app/node_modules
+    stdin_open: true
