--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,9 @@
     container_name: postgres
     image: postgres:latest
     restart: always
-    profiles: ["default", "backend"]
+    profiles:
+      - ''
+      - backend
     environment:
       POSTGRES_USER: ${POSTGRES_USER:-admin} # Warning: Placeholder value, use .env file when deploying to server
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-root1234} # Warning: Placeholder value, use .env file when deploying to server
@@ -26,7 +28,9 @@
     container_name: pgadmin
     image: dpage/pgadmin4
     restart: always
-    profiles: ["default", "backend"]
+    profiles:
+      - ''
+      - backend
     environment:
       PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL:-admin@admin.com} # Warning: Placeholder value, use .env file when deploying to server
       PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD:-root1234} # Warning: Placeholder value, use .env file when deploying to server
@@ -42,7 +46,9 @@
   api:
     build:
       context: .
-    profiles: ["default", "backend"]
+    profiles:
+      - ''
+      - backend
     environment:
       - ASPNETCORE_URLS=http://+:80
       - DOTNET_USE_POLLING_FILE_WATCHER=1
@@ -67,7 +73,9 @@
     build:
       context: ./clientapp
       dockerfile: Dockerfile
-    profiles: ["default", "frontend"]
+    profiles:
+      - ''
+      - frontend
     ports:
       - "3000:80"
     expose:
